style.css
*
{
  padding: 0;
  box-sizing: border-box;
  font-family: 'poppins', 'sans-serif'; 
}


body{
  background: #000;
  overflow: hidden;
  height: 100%;
}

i{
  position: absolute;
  height: 20%;
  background: linear-gradient(transparent, #fff);
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  animation: animate 2.5s linear infinite;
}

@keyframes animate
{
  0%
  {
    transform: translateY(-100%);
  }
  100%
  {
    transform: translateY(500%);
  }
}

.container{
  color: rgb(255,255,255);
  font-size: 1.7vw;
  text-align: center;
}

.launch-time {
  display: flex;
  margin-left: auto;
  margin-right: auto;
  width: 35%;
}
.launch-time div{
  flex-basis: 30%;
}

.launch-time div p{
  margin-bottom: 1%;
}

